STAR-1561: added proposal openapi
